<resources>
    <string name="app_name">Spreader_Android</string>
    <!--home-->
    <string name="home_title">首页</string>
    <string name="home_fixed_red_packet">固定红包</string>
    <string name="home_random_red_packet">随机红包</string>
    <string name="home_release_msg">发布信息</string>
    <string name="home_find_money">发现红包</string>
    <string name="home_red_packet_number">红包个数</string>
    <string name="home_total_money">总金额</string>
    <string name="home_single_money">单个金额</string>
    <string name="home_start_time">开始时间</string>
    <string name="home_end_time">结束时间</string>
    <string name="home_release_address">发布地点</string>
    <string name="home_hint_red_packet_number">输入个数</string>
    <string name="home_hint_total_money">输入金额</string>
    <string name="home_hint_time">请选择时间</string>
    <string name="home_hint_address">请选择地点</string>
    <string name="home_expand_tip">推广信息</string>
    <string name="home_expand_add_tip">添加推广信息</string>
    <string name="home_upload_image">上传图片</string>
    <string name="home_hint_expand_tip">请输入推广信息（100字以内）</string>
    <string name="home_upload">上传</string>
    <string name="home_exit">退出</string>
    <string name="hone_click_login">点击登录</string>
    <string name="home_slip_user_center">个人中心</string>
    <string name="home_slip_wallet">钱包</string>
    <string name="home_slip_history_release">历史推广信息</string>
    <string name="home_slip_history_statistic">统计</string>

    <string name="home_unit_pieces">个</string>
    <string name="home_unit_yuan">元</string>

    <!--login-->
    <string name="login">登录</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_forget_pass">忘记密码</string>
    <string name="login_remember_pass">记住密码</string>
    <string name="login_auto_login">自动登录</string>
    <string name="login_go_to_register">没有账号？立即注册</string>

    <!--注册-->
    <string name="register">注册</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_re_password">二次密码</string>
    <string name="register_image_code">图形验证码</string>

    <!--个人中心-->
    <string name="user_center">个人中心</string>
    <string name="user_center_accounts">帐号</string>
    <string name="user_center_nickname">昵称</string>
    <string name="user_center_phone">手机号</string>
    <string name="user_center_ali">支付宝帐号</string>
    <string name="user_center_update_password">修改密码</string>
    <string name="user_center_complete">完成</string>
    <string name="user_center_old_pass">旧密码</string>
    <string name="user_center_new_pass">新密码</string>
    <string name="user_center_re_pass">再次输入新密码</string>

    <!--钱包-->
    <string name="wallet_balance">余额账户(元)</string>
    <string name="wallet_withdraw">提现</string>
    <string name="wallet_history_details">明细</string>
    <string name="wallet_history_more_details">账单详情</string>
    <string name="wallet_withdraw_money">提现金额</string>
    <string name="wallet_withdraw_confirm">确认提现</string>
    <string name="wallet_withdraw_warning">目前只支持提现到支付宝账号，提现前请先绑定！！！</string>

    <!--推广信息-->
    <string name="history_release">推广信息</string>
    <string name="history_release_details">详细信息</string>
    <string name="history_release_picture">相册</string>
    <string name="history_release_video">视频</string>

    <!--发现红包-->
    <string name="discover_order_smart">智能排序</string>
    <string name="discover_order_max_people">人数最多</string>
    <string name="discover_order_max_count">金额最大</string>
    <string name="discover_order_min_distance">离我最近</string>
    <string name="discover_order_type">红包类型</string>
    <string name="discover_order_number">人数</string>
    <string name="discover_order_money">金额</string>
    <string name="discover_order_reset">重置</string>
    <string name="discover_order_confirm">确定</string>
    <string name="discover_red_packet_sponsor">发起人</string>
    <string name="discover_red_packet_activity_info">活动信息</string>
    <string name="discover_red_packet_info">红包信息</string>
    <string name="discover_red_packet_navigation">地图导航</string>
    <string name="discover_red_packet_coupon">优惠券</string>
</resources>
