<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_head_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:textSize="@dimen/dimen_20" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textSize="@dimen/dimen_20" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_14"
            android:layout_marginRight="@dimen/margin_14"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remember_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_remember_pass"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_auto_login" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_14"
            android:layout_marginRight="@dimen/margin_14"
            android:text="@string/login"
            android:layout_marginTop="@dimen/margin_10"
            style="@style/ConfirmButton"/>
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_go_to_register"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"/>
    </LinearLayout>
</LinearLayout>