<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include layout="@layout/layout_head_view" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_14">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_4"
                android:background="@drawable/bg_border_white"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_10"
                android:paddingTop="@dimen/padding_14"
                android:paddingRight="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_14">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_single_money"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimen_18" />

                <EditText
                    android:id="@+id/price"
                    style="@style/EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="4"
                    android:gravity="right"
                    android:hint="@string/home_hint_total_money"
                    android:inputType="number"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_unit_yuan"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimen_18" />
            </LinearLayout>

            <TextView
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:paddingLeft="@dimen/padding_10"
                tools:text="当前为随机红包，点击转换成普通红包" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_14"
                android:background="@drawable/bg_border_white"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_10"
                android:paddingTop="@dimen/padding_14"
                android:paddingRight="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_14">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_red_packet_number"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimen_18" />

                <EditText
                    android:id="@+id/count"
                    style="@style/EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="4"
                    android:gravity="right"
                    android:hint="@string/home_hint_red_packet_number"
                    android:inputType="number"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_unit_pieces"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimen_18" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_14"
                android:background="@drawable/bg_border_white"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_10"
                android:paddingTop="@dimen/padding_14"
                android:paddingRight="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_14">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_start_time"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimen_18" />

                <TextView
                    android:id="@+id/start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/home_hint_time"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimen_18" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_14"
                android:background="@drawable/bg_border_white"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_10"
                android:paddingTop="@dimen/padding_14"
                android:paddingRight="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_14">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_end_time"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimen_18" />

                <TextView
                    android:id="@+id/end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/home_hint_time"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimen_18" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/release_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_white"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_10"
                android:paddingTop="@dimen/padding_14"
                android:paddingRight="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_14">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_release_address"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimen_18" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:hint="@string/home_hint_address"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimen_18" />
            </LinearLayout>

            <Button
                android:id="@+id/submit"
                style="@style/ConfirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_14"
                android:layout_marginEnd="@dimen/margin_10"
                android:text="@string/home_put_money"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>