<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_head_view" />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorContentBackground"
        android:padding="@dimen/padding_14"
        android:textCursorDrawable="@drawable/cursor_edit_style"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorContentBackground"
            android:padding="@dimen/padding_14"
            android:hint="@string/user_center_old_pass"
            android:textCursorDrawable="@drawable/cursor_edit_style" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/margin_14"
            android:background="@color/colorHintText" />

        <EditText
            android:id="@+id/new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorContentBackground"
            android:padding="@dimen/padding_14"
            android:hint="@string/user_center_new_pass"
            android:textCursorDrawable="@drawable/cursor_edit_style" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/margin_14"
            android:background="@color/colorHintText" />

        <EditText
            android:id="@+id/re_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorContentBackground"
            android:padding="@dimen/padding_14"
            android:hint="@string/user_center_re_pass"
            android:textCursorDrawable="@drawable/cursor_edit_style" />
    </LinearLayout>
</LinearLayout>